# EEEE2065-cw4

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README_8md.html  annotated.html  classcw4_1_1Complex-members.html  classcw4_1_1Complex.html  classcw4_1_1Mandelbrot-members.html  classcw4_1_1Mandelbrot.html  classes.html  complex_8cpp.html  complex_8h.html  complex_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8f43291d7408ab2dbd4831216fb9f163.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_func.html  index.html  main_8cpp.html  mandelbrot-set_8cpp.html  mandelbrot-set_8h.html  mandelbrot-set_8h_source.html  menudata.js  namespacecw4.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  report.org
.github/workflows/: super-linter.yml
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  namespaces_0.js  pages_0.js  related_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  (+1 more)
src/mandelbrot-set/: complex.cpp  complex.h  main.cpp  mandelbrot-set.cpp  mandelbrot-set.h
src/mandlebrot-set/: CMakeLists.txt  complex.h
